# priobike-biker-swarm-monitor

./: Dockerfile  README.md  dev.env  docker-compose.yml  example-crash-report.json  example-danger.json  example-success-report.json  example-vote.json  pyproject.toml
.github/workflows/: publish.yaml
backend/backend/: settings.py  urls.py
backend/crashReports/: admin.py  apps.py  models.py  urls.py  views.py
backend/crashReports/migrations/: 0001_initial.py  0002_remove_crashreport_timesincestart_and_more.py
nginx_inner/conf.d/: default.conf
