[tool.poetry]
name = "priobike-biker-swarm-monitor"
version = "1.0.0"
description = "A microservice to monitor crash reports by biker swarm."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
Django = "^4.0.5"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
scipy = "^1.11.0"
numpy = "^1.25.0"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
